methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:5: error: ';' expected but ')' found.
    if(isFacingTrail()){avance();marquer()}else{droite();if(isFacingTrail()){avance();marquer()}else{droite();droite();avance();marquer()})}
                                                                                                                                          ^